<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="0dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/AddCar"
        android:textColor="@color/colorAccent"
        android:textSize="30dp"
        android:layout_marginLeft="130dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Namecartoadd"
        android:hint="@string/Name"
        android:layout_marginTop="50dp"
        android:textSize="20dp"
        android:paddingLeft="150dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/modelcartoadd"
        android:hint="@string/Model"
        android:layout_marginTop="130dp"
        android:textSize="20dp"
        android:paddingLeft="150dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/madeINcarToAddCar"
        android:hint="@string/madeIN"
        android:layout_marginTop="200dp"
        android:textSize="20dp"
        android:paddingLeft="150dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/priceCarToAddcar"
        android:hint="@string/price"
        android:layout_marginTop="270dp"
        android:textSize="20dp"
        android:paddingLeft="150dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/kindCarToAddcar"
        android:hint="@string/kind"
        android:layout_marginTop="340dp"
        android:textSize="20dp"
        android:paddingLeft="150dp"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/addcarbutton"
        android:text="@string/AddCar"
        android:background="@color/colorlogin"
        android:textColor="@color/textColor"
        android:layout_marginTop="400dp"
        android:textSize="20dp"
        />



</RelativeLayout>