<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buycar"
        android:textSize="30dp"
        android:textColor="@color/color"
        android:paddingLeft="130dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/visaNumberbuy"
        android:hint="@string/visaNumber"
        android:paddingLeft="120dp"
        android:textSize="20dp"
        android:layout_marginTop="80dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/pricebuyCar"
        android:hint="@string/pricecar"
        android:paddingLeft="130dp"
        android:textSize="20dp"
        android:layout_marginTop="140dp"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonbuy"
        android:background="@color/colorlogin"
        android:textColor="@color/textColor"
        android:textSize="20dp"
        android:id="@+id/buttonbuyCar"
        android:layout_marginTop="200dp"
        />

</RelativeLayout>
